Se agrega color de fondo

--- a/htmlPrueba.html
+++ b/htmlPrueba.html
@@ -3,7 +3,7 @@
     <head>
         <title>TITULO DE PRUEBA</title>
     </head>
-    <body>
+    <body bgcolor= "C95C22">
 TEXTO DE PRUEBA
 
     </body>
