Se agregan headers

--- a/htmlPrueba.html
+++ b/htmlPrueba.html
@@ -4,7 +4,9 @@
         <title>TITULO DE PRUEBA</title>
     </head>
     <body bgcolor= "C95C22">
-TEXTO DE PRUEBA
+<h1>TEXTO DE PRUEBA</h1>
+<h2>Orvil Alejandro AKA Chicles</h2>
+<h3>Practica GIT</h3>
 
     </body>
 </html>
