--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h1>TEXTO DE PRUEBA</h1>
 <h2>Orvil Alejandro AKA Chicles</h2>
 <h3>Practica GIT</h3>
+<img src ="patricio.jpeg">
 
     </body>
 </html>
