añadida descripcion e imagen

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TITULO DE PRUEBA</title>
+        <title>Orvil Ibarra</title>
     </head>
     <body bgcolor= "C95C22">
-<h1>TEXTO DE PRUEBA</h1>
-<h2>Orvil Alejandro AKA Chicles</h2>
+<h1>Orvil Alejandro AKA Chicles</h1>
+<h2>Desarrollador Software</h2>
 <h3>Practica GIT</h3>
-<img src ="patricio.jpeg">
-
+<p>Estudiante ITIT ULSA Chihuahua
+Amante de la vida</p>
+<img src ="https://scontent.felp1-1.fna.fbcdn.net/v/t1.6435-9/119947642_189876916125064_7395246923535760662_n.jpg?stp=cp0_dst-jpg_e15_p320x320_q65&_nc_cat=103&ccb=1-7&_nc_sid=9e2e56&_nc_ohc=mjCxl1brh70AX9LE9_H&_nc_ht=scontent.felp1-1.fna&oh=00_AT_WUuGBZntfDkgBZV1g6vdNrXTabWfwxrvwwOcTITeNtQ&oe=634DD436">
+<a href ="https://www.youtube.com/watch?v=BmCFlEBQnR8/">
+    <button>"LINK"</button>
+</a>
     </body>
 </html>
