Se cambio la imagen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Amante de la vida</p>
     <li>Bueno trabajando en equipo</li>
 
 </ul>
-<img src ="https://scontent.felp1-1.fna.fbcdn.net/v/t1.6435-9/119947642_189876916125064_7395246923535760662_n.jpg?stp=cp0_dst-jpg_e15_p320x320_q65&_nc_cat=103&ccb=1-7&_nc_sid=9e2e56&_nc_ohc=mjCxl1brh70AX9LE9_H&_nc_ht=scontent.felp1-1.fna&oh=00_AT_WUuGBZntfDkgBZV1g6vdNrXTabWfwxrvwwOcTITeNtQ&oe=634DD436">
+<img src ="https://www.alura.com.br/artigos/assets/uploads/2018/06/softskills-post.jpg">
 <a href ="https://www.youtube.com/watch?v=BmCFlEBQnR8/">
     <button>"LINK"</button>
 </a>
