--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3>Practica GIT</h3>
 <p>Estudiante ITIT ULSA Chihuahua
 Amante de la vida</p>
-
+<img src ="https://scontent.felp1-1.fna.fbcdn.net/v/t1.6435-9/35550897_223358581793593_5224707293290954752_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=973b4a&_nc_ohc=K284kqG5z98AX9njWOo&_nc_ht=scontent.felp1-1.fna&oh=00_AT-nda0SQsW-_k8pCbhoXHpPSVF1TOdGmyJrwokIxF89ag&oe=6350E11F">
 <br>
 <h2>Información Personal</h2>
 <ul>
